--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -185,7 +185,7 @@ jobs:
 
     - name: replace helm version to run_id
       run: |
-        python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${{ fromJSON(needs.changes.outputs.services) }} ${BRANCH_NAME}
+        python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${{ needs.changes.outputs.services }} ${BRANCH_NAME}
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
