--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,8 @@ jobs:
             echo "$ARRAY"
             services=['"amplication-client", "amplication-server"']
             echo "$services"
-            echo "::set-output name=array::$services"
+            echo "::set-output name=tmp_array::$services"
+            echo "::set-output name=list::$services"
 
       # - name: Filter services from array
       #   id: filter-services
@@ -185,7 +186,7 @@ jobs:
 
     - name: replace helm version to run_id
       run: |
-        python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${BRANCH_NAME} ${{ needs.changes.outputs.services }}
+        python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${BRANCH_NAME} ${{ needs.changes.outputs.all_changed_files }}
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
