--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -170,6 +170,11 @@ jobs:
     #     else
     #       echo "::set-output name=docker-service::false"
     #     fi
+
+    - name: print node env
+      run: |
+        echo $NODE_ENV
+
     - name: set branch-name
       run: |
         if [[ $GITHUB_REF != 'refs/heads/master' ]]
