--- a/packages/amplication-git-pull-service/.env
+++ b/packages/amplication-git-pull-service/.env
@@ -1,15 +1,15 @@
-POSTGRESQL_USER=admin
-POSTGRESQL_PASSWORD=admin
-POSTGRESQL_PORT=5432
-POSTGRESQL_URL=postgres://admin:admin@localhost:5432
-COMPOSE_PROJECT_NAME=amplication-git-pull-service
+# POSTGRESQL_USER=admin
+# POSTGRESQL_PASSWORD=admin
+# POSTGRESQL_PORT=5432
+# POSTGRESQL_URL=postgres://admin:admin@localhost:5432
+# COMPOSE_PROJECT_NAME=amplication-git-pull-service
 
-NODE_ENV=production
-BROKER_IP_ENV_KEY=localhost:[localhost:9092]
-KAFKA_CONSUMER_GROUP=git-pull-event
-KAFKA_CLIENT_ID=repository-pull
+# NODE_ENV=production
+# BROKER_IP_ENV_KEY=localhost=[localhost:9092]
+# KAFKA_CONSUMER_GROUP=git-pull-event
+# KAFKA_CLIENT_ID=repository-pull
 
-STORAGE_PATH=
-MAX_SNAPSHOTS=
-GIT_DEFAULT_ORIGIN_NAME=origin
+# STORAGE_PATH=
+# MAX_SNAPSHOTS=
+# GIT_DEFAULT_ORIGIN_NAME=origin
 
