--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
     outputs:
       services: ${{ steps.filter-services.outputs.array }}
       all_changed_files: ${{ steps.filter.outputs.array }}
+      packages: ${{ steps.resolved-packages.outputs.packages }}
     steps:
       - uses: actions/checkout@v2
         with:
@@ -73,6 +74,26 @@ jobs:
             services=['"amplication-client", "amplication-server"']
             echo "$services"
             echo "::set-output name=array::$services"
+
+      - name: Resolve changed packages
+        id: resolved-packages
+        run: |
+          echo ::set-output name=packages::$( \
+
+          # Git Diff - Get all changed files
+          git diff --name-only origin/master -- 'packages/**' |
+
+          # Extract package names from files path
+          grep -Po 'packages/\K[^/]*' |
+
+          # Dupplication
+          sort -t: -u -k1,1 |
+
+          # Format, Example: amplication-cli => package:@amplication/cli:path:amplication-cli
+          sed -e "s/amplication-\(.*\)/package:@amplication\/\1:path:packages\/amplication-\1/" |
+
+          # Create array of objects, => [{"package": "@amplication/cli", "path": "amplication-cli"}]
+          jq -Rs 'split("\n")|map(split(":")|{(.[0]):.[1],(.[2]):.[3]}?)')
 
       # - name: Filter services from array
       #   id: filter-services
@@ -141,90 +162,151 @@ jobs:
   #     run: npm test
     
 
-
-
-  tests:
-    runs-on: ubuntu-latest
-    needs: [changes]
-    # if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
+  validate-package:
+    runs-on: ubuntu-20.04
+    needs:
+      - changes
+    timeout-minutes: 45
     strategy:
       matrix:
-        node-version: [16.x]
-        service: ${{ fromJSON(needs.changes.outputs.services) }} 
-
+        package: ${{ fromJson(needs.changes.outputs.packages) }}
+        node-version: [14.x, 16.x]
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    # - name: Check docker-service
-    #   id: check-docker-service
-    #   env: 
-    #     SERVICE: ${{ matrix.service }}
-    #   run: |
-    #     FILE=packages/$SERVICE/Dockerfile
-    #     if [[ -f "$FILE" ]] 
-    #     then
-    #       echo "$FILE exists."
-    #       echo "::set-output name=docker-service::true"
-    #     else
-    #       echo "::set-output name=docker-service::false"
-    #     fi
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.npm
+            node_modules
+            */*/node_modules
+          key: PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package.package}}-${{ hashFiles(format('{0}/package-lock.json',matrix.package.path)) }}
+          restore-keys: |
+            PUSH-${{ runner.os }}-${{matrix.node-version}}-${{matrix.package.package}}-
+            PUSH-${{ runner.os }}-${{matrix.node-version}}-
+            PUSH-${{ runner.os }}-
 
-    - name: set branch-name
-      run: |
-        if [[ $GITHUB_REF != 'refs/heads/master' ]]
-        then 
-          echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
-        fi
+      - name: Install Node.js dependencies
+        run: npm ci --cache ~/.npm --prefer-offline --only=production --silent
+
+      - name: Install package dependencies
+        id: install
+        run: lerna bootstrap --scope=${{matrix.package.package}} --include-dependencies
+
+      - name: Build Prisma client
+        id: prisma
+        run: lerna run --scope=${{matrix.package.package}} prisma:generate
+
+      - name: Build code
+        id: build
+        run: lerna run --scope=${{matrix.package.package}} --loglevel=silent build --include-dependencies
+
+      - name: Format code
+        id: format
+        run: lerna run --scope=${{matrix.package.package}} --loglevel=silent check-format
+
+      - name: Lint code
+        id: lint
+        run: lerna run --scope=${{matrix.package.package}} --loglevel=silent lint
+
+      - name: Run tests
+        id: test
+        run: lerna run --scope=${{matrix.package.package}} --loglevel=silent test
+
+      - name: Discord notification
+        if: failure()
+        uses: Ilshidur/action-discord@0.3.2
+        env:
+          DISCORD_WEBHOOK: ${{ secrets.DISCORD_BUILD_NOTIFICATIONS_CHANNEL_WEBHOOK }}
+          DISCORD_EMBEDS: '[{"color":15734528,"title":"Push Validation Failed - ${{ github.ref_name }}","url":"https://github.com/${{github.repository}}/actions/runs/${{github.run_id}}","description":"Job ${{ github.job }} in workflow ${{ github.workflow }} failed!","fields":[{"name":"Package","value":"${{ matrix.package.package }}"},{"name":"Commiter","value":"${{ github.event.pusher.name }}"},{"name":"Commit","value":"${{ github.event.head_commit.id }}"},{"name":"Install","value":"${{ steps.install.outcome }}","inline":true},{"name":"Build","value":"${{ steps.build.outcome }}","inline":true},{"name":"Test","value":"${{ steps.test.outcome }}","inline":true},{"name":"Format","value":"${{ steps.format.outcome }}","inline":true},{"name":"Lint","value":"${{ steps.lint.outcome }}","inline":true}]}]'
+
+  # tests:
+  #   runs-on: ubuntu-latest
+  #   needs: [changes]
+  #   # if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
+  #   strategy:
+  #     matrix:
+  #       node-version: [16.x]
+  #       service: ${{ fromJSON(needs.changes.outputs.services) }} 
+
+  #   steps:
+  #   - name: Checkout repository
+  #     uses: actions/checkout@v2
+
+  #   # - name: Check docker-service
+  #   #   id: check-docker-service
+  #   #   env: 
+  #   #     SERVICE: ${{ matrix.service }}
+  #   #   run: |
+  #   #     FILE=packages/$SERVICE/Dockerfile
+  #   #     if [[ -f "$FILE" ]] 
+  #   #     then
+  #   #       echo "$FILE exists."
+  #   #       echo "::set-output name=docker-service::true"
+  #   #     else
+  #   #       echo "::set-output name=docker-service::false"
+  #   #     fi
+
+  #   - name: set branch-name
+  #     run: |
+  #       if [[ $GITHUB_REF != 'refs/heads/master' ]]
+  #       then 
+  #         echo "BRANCH_NAME=$(echo $GITHUB_REF_NAME | sed "s/\//-/g")" >> $GITHUB_ENV
+  #       fi
   
 
-    - name: download folder if service not changed 
-      run: |
-        set +e
-        unupdated_services=()
-        if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-server" ]]; then
-          unupdated_services+=("amplication-server")
-        fi
-        if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-client" ]]; then
-          unupdated_services+=("amplication-client")
-        fi
-        echo $unupdated_services
+  #   - name: download folder if service not changed 
+  #     run: |
+  #       set +e
+  #       unupdated_services=()
+  #       if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-server" ]]; then
+  #         unupdated_services+=("amplication-server")
+  #       fi
+  #       if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-client" ]]; then
+  #         unupdated_services+=("amplication-client")
+  #       fi
+  #       echo $unupdated_services
 
 
-    - name: install python dependencies
-      run: |
-        pip install ruamel.yaml
-        pip install pytest-shutil
+  #   - name: install python dependencies
+  #     run: |
+  #       pip install ruamel.yaml
+  #       pip install pytest-shutil
 
 
-    - name: replace helm version to run_id
-      run: |
-        python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${BRANCH_NAME} "${{ needs.changes.outputs.services }}"
+  #   - name: replace helm version to run_id
+  #     run: |
+  #       python devlopment_scripts/update_helm_versions.py ${GITHUB_RUN_ID} ${BRANCH_NAME} "${{ needs.changes.outputs.services }}"
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+  #   - name: Use Node.js ${{ matrix.node-version }}
+  #     uses: actions/setup-node@v2
+  #     with:
+  #       node-version: ${{ matrix.node-version }}
+  #       cache: 'npm'
 
-    - name: print node env
-      run: |
-        echo $NODE_ENV
+  #   - name: print node env
+  #     run: |
+  #       echo $NODE_ENV
         
-    - name: "Install dependencies ${{ matrix.service }}"
-      run: npm ci
+  #   - name: "Install dependencies ${{ matrix.service }}"
+  #     run: npm ci
 
-    - name: "Test first run: ${{ matrix.service }}"
-      working-directory: packages/${{ matrix.service }}
-      run: npm test
+  #   - name: "Test first run: ${{ matrix.service }}"
+  #     working-directory: packages/${{ matrix.service }}
+  #     run: npm test
 
-    - name: "Check format: ${{ matrix.service }}"
-      working-directory: packages/${{ matrix.service }}
-      run: npm run check-format
+  #   - name: "Check format: ${{ matrix.service }}"
+  #     working-directory: packages/${{ matrix.service }}
+  #     run: npm run check-format
 
-    - name: "Lint first run: ${{ matrix.service }}"
-      working-directory: packages/${{ matrix.service }}
-      run: npm run lint
+  #   - name: "Lint first run: ${{ matrix.service }}"
+  #     working-directory: packages/${{ matrix.service }}
+  #     run: npm run lint
 
   # format:
   #   runs-on: ubuntu-latest
