--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,6 +95,17 @@ jobs:
           # Create array of objects, => [{"package": "@amplication/cli", "path": "amplication-cli"}]
           jq -Rs 'split("\n")|map(split(":")|{(.[0]):.[1],(.[2]):.[3]}?)')
 
+      - name: download folder if service not changed 
+        run: |
+          set +e
+          unupdated_services=()
+          if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-server" ]]; then
+            unupdated_services+=("amplication-server")
+          fi
+          if [[ ! " ${{ needs.changes.outputs.services }}[*] " =~ "amplication-client" ]]; then
+            unupdated_services+=("amplication-client")
+          fi
+          echo $unupdated_services
       # - name: Filter services from array
       #   id: filter-services
       #   env:
@@ -307,139 +318,6 @@ jobs:
   #   - name: "Lint first run: ${{ matrix.service }}"
   #     working-directory: packages/${{ matrix.service }}
   #     run: npm run lint
-
-  # format:
-  #   runs-on: ubuntu-latest
-  #   needs: changes
-  #   if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
-  #   strategy:
-  #     matrix:
-  #       node-version: [16.x]
-  #       service: ${{ fromJSON(needs.changes.outputs.services) }} 
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v2
-
-  #   - name: Check docker-service
-  #     id: check-docker-service
-  #     env: 
-  #       SERVICE: ${{ matrix.service }}
-  #     run: |
-  #       FILE=packages/$SERVICE/Dockerfile
-  #       if [[ -f "$FILE" ]] 
-  #       then
-  #         echo "$FILE exists."
-  #         echo "::set-output name=docker-service::true"
-  #       else
-  #         echo "::set-output name=docker-service::false"
-  #       fi
-
-  #   - name: Use Node.js ${{ matrix.node-version }}
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: ${{ matrix.node-version }}
-  #       cache: 'npm'
-        
-  #   - name: "Install dependencies ${{ matrix.service }}"
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     run: npm ci
-
-  #   - name: "Check format: ${{ matrix.service }}"
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     working-directory: packages/${{ matrix.service }}
-  #     run: npm run check-format
-      
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   needs: [changes]
-  #   if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
-  #   strategy:
-  #     matrix:
-  #       node-version: [16.x]
-  #       service: ${{ fromJSON(needs.changes.outputs.services) }} 
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v2
-
-  #   - name: Check docker-service
-  #     id: check-docker-service
-  #     env: 
-  #       SERVICE: ${{ matrix.service }}
-  #     run: |
-  #       FILE=packages/$SERVICE/Dockerfile
-  #       if [[ -f "$FILE" ]] 
-  #       then
-  #         echo "$FILE exists."
-  #         echo "::set-output name=docker-service::true"
-  #       else
-  #         echo "::set-output name=docker-service::false"
-  #       fi
-
-  #   - name: Use Node.js ${{ matrix.node-version }}
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: ${{ matrix.node-version }}
-  #       cache: 'npm'
-        
-  #   - name: "Install dependencies ${{ matrix.service }}"
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     run: npm ci
-        
-  #   - name: "Lint first run: ${{ matrix.service }}"
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     working-directory: packages/${{ matrix.service }}
-  #     run: npm run lint
-
-  # build:
-  #   runs-on: ubuntu-latest
-  #   needs: [changes]
-  #   if: ${{ needs.changes.outputs.services != '[]' && needs.changes.outputs.services != '' }}
-  #   strategy:
-  #     matrix:
-  #       node-version: [16.x]
-  #       service: ${{ fromJSON(needs.changes.outputs.services) }} 
-
-  #   steps:
-  #   - name: Checkout repository
-  #     uses: actions/checkout@v2
-
-  #   - name: Check docker-service
-  #     id: check-docker-service
-  #     env: 
-  #       SERVICE: ${{ matrix.service }}
-  #     run: |
-  #       FILE=packages/$SERVICE/Dockerfile
-  #       if [[ -f "$FILE" ]] 
-  #       then
-  #         echo "$FILE exists."
-  #         echo "::set-output name=docker-service::true"
-  #       else
-  #         echo "::set-output name=docker-service::false"
-  #       fi
-
-  #   - name: Use Node.js ${{ matrix.node-version }}
-  #     uses: actions/setup-node@v2
-  #     with:
-  #       node-version: ${{ matrix.node-version }}
-  #       cache: 'npm'
-
-  #   - name: Check docker-service
-  #     run: |
-  #       echo docker_exists = ${{ steps.check-docker-service.outputs.docker-service }}
-
-
-  #   - name: "Install dependencies ${{ matrix.service }}"
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     run: npm ci
-
-  #   - name: "Build packages first run: ${{ matrix.service }}"
-  #     continue-on-error: true
-  #     if: ${{ steps.check-docker-service.outputs.docker-service == 'true' }}
-  #     working-directory: packages/${{ matrix.service }}
-  #     run: npm run build
- 
   
   docker:
     name: docker
@@ -454,20 +332,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      # - name: Check docker-service
-      #   id: check-docker-service
-      #   env: 
-      #     SERVICE: ${{ matrix.service }}
-      #   run: |
-      #     FILE=packages/$SERVICE/Dockerfile
-      #     if [[ -f "$FILE" ]] 
-      #     then
-      #       echo "$FILE exists."
-      #       echo "::set-output name=docker-service::true"
-      #     else
-      #       echo "::set-output name=docker-service::false"
-      #     fi
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
@@ -547,6 +411,7 @@ jobs:
             Docker_image=$ECR_REGISTRY/$ECR_REPOSITORY_PROD:$GITHUB_HASH
             ECR_repository=$ECR_REPOSITORY_PROD
           fi
+          echo $Ecr_repository
           docker build -f ./packages/${{ matrix.service }}/Dockerfile . -t $Docker_image
           docker push $Docker_image
           MANIFEST=$(aws ecr batch-get-image --repository-name $ECR_repository --image-ids imageTag=$GITHUB_HASH --output json | jq --raw-output --join-output '.images[0].imageManifest')
@@ -568,11 +433,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-
-      # - name: valudate if a docker service
-      #   run: |
-      #     echo service : ${{ matrix.service }} , docker-service? - ${{ needs.docker.outputs.docker-services }}
-
 
       # - name: download folder if service not changed 
       #   run: |
